--- a/index.htm
+++ b/index.htm
@@ -716,10 +716,10 @@
             <div class="t107">
                 <div class="t-align_center" itemscope="" itemtype="http://schema.org/ImageObject">
                     <meta itemprop="image"
-                        content="https://github.com/jacob4353452/tehnomap/blob/main/%D1%82%D0%B5%D1%85%D0%BD%D0%BE%D1%85%D1%83-2.png?raw=true"> <img
+                        content="https://raw.githubusercontent.com/jacob4353452/hutormap/main/%D1%82%D0%B5%D1%85%D0%BD%D0%BE%D1%85%D1%83%D1%82%D0%BE%D1%80%D0%BA%D0%B0%D1%80%D1%82%D0%B2%D0%B0%D0%B0-2.png"> <img
                         class="t-img t-width t107__widthauto"
-                        src="https://github.com/jacob4353452/tehnomap/blob/main/%D1%82%D0%B5%D1%85%D0%BD%D0%BE%D1%85%D1%83-2.png?raw=true"
-                        data-original="https://github.com/jacob4353452/tehnomap/blob/main/%D1%82%D0%B5%D1%85%D0%BD%D0%BE%D1%85%D1%83-2.png?raw=true"
+                        src="https://raw.githubusercontent.com/jacob4353452/hutormap/main/%D1%82%D0%B5%D1%85%D0%BD%D0%BE%D1%85%D1%83%D1%82%D0%BE%D1%80%D0%BA%D0%B0%D1%80%D1%82%D0%B2%D0%B0%D0%B0-2.png"
+                        data-original="https://raw.githubusercontent.com/jacob4353452/hutormap/main/%D1%82%D0%B5%D1%85%D0%BD%D0%BE%D1%85%D1%83%D1%82%D0%BE%D1%80%D0%BA%D0%B0%D1%80%D1%82%D0%B2%D0%B0%D0%B0-2.png"
                         imgfield="img" alt="">
                 </div>
             </div>
